--- a/2_motion_analysis.ipynb
+++ b/2_motion_analysis.ipynb
@@ -44,7 +44,7 @@
    ],
    "source": [
     "# load data\n",
-    "df = pd.read_csv(\"data/mean_fd_n184.csv\")\n",
+    "df = pd.read_csv(\"data/mean_fd_n184.csv\") # all sub mean_fd with a row for each condition (long format)\n",
     "n = df[\"sub\"].unique().shape[0]\n",
     "# select subjects with MOVIE 1-4, and REST 1-4\n",
     "df = df.query(\"condition == 'MOVIE1' | condition == 'MOVIE2' | condition == 'MOVIE3' | condition == 'MOVIE4' | condition == 'REST1' | condition == 'REST2' | condition == 'REST3' | condition == 'REST4'\")\n",
@@ -503,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
